--- a/here-string.cabal
+++ b/here-string.cabal
@@ -1,29 +1,25 @@
-name: here
-version: 1.2.13
+name: here-string
+version: 0.1.0.0
 synopsis: Here docs & interpolated strings via quasiquotation
 description: Here docs & interpolated strings via quasiquotation
 license: BSD3
 license-file: LICENSE
 author: Taylor M. Hedberg
-maintainer: t@tmh.cc
+maintainer: strake888@gmail.com
 copyright: ©2013 Taylor M. Hedberg, ©2014 Google Inc.
-homepage: https://github.com/tmhedberg/here
+homepage: https://github.com/strake/here-string.hs
 category: Data
 build-type: Simple
-cabal-version: >=1.8
+cabal-version: >=1.10
 
 source-repository head
   type: git
-  location: git://github.com/tmhedberg/here.git
+  location: https://github.com/strake/here-string.hs
 
 library
   hs-source-dirs: src
   exposed-modules:
-    Data.String.Here,
-    Data.String.Here.Interpolated,
-    Data.String.Here.Uninterpolated
-  other-modules:
-    Data.String.Here.Internal
+    QQ.String
   build-depends:
     base >= 4.5 && < 5,
     haskell-src-meta >= 0.6 && < 0.9,
@@ -31,6 +27,10 @@ library
     parsec ==3.1.*,
     template-haskell
   ghc-options: -Wall
+  default-language: Haskell2010
+  default-extensions:
+    LambdaCase
+    BlockArguments
 
 test-suite here-test
   type: exitcode-stdio-1.0
@@ -44,5 +44,5 @@ test-suite here-test
     bytestring,
     text
   other-modules:
-    Data.String.HereSpec
+    QQ.StringSpec
   default-language: Haskell2010
